completed second template

--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 84/index.html
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 84/index.html
@@ -75,13 +75,13 @@
                 longest match duration and is considered the game's highest
                 standard.
               </p>
-              <p class="readmore">
+              <div class="readmore">
                 <a
                   href="https://en.wikipedia.org/wiki/Test_cricket#Test_status"
                   target="_blank"
                   >Read More >></a
                 >
-              </p>
+              </div>
             </article>
             <article class="article" id="article2">
               <figure>
@@ -92,13 +92,13 @@
                 A ODI is a form of limited overs cricket with a fixed number of
                 overs, currently 50, with the game lasting up to 9 hours.
               </p>
-              <p class="readmore">
+              <div class="readmore">
                 <a
                   href="https://en.wikipedia.org/wiki/One_Day_International"
                   target="_blank"
                   >Read More >></a
                 >
-              </p>
+              </div>
             </article>
             <article class="article" id="article3">
               <figure>
@@ -109,10 +109,10 @@
                 T20 is a shortened game format of cricket with restricted to a
                 maximum of 20 overs.
               </p>
-              <p class="readmore">
+              <div class="readmore">
                 <a href="https://en.wikipedia.org/wiki/Twenty20" target="_blank"
                   >Read More >></a>
-              </p>
+              </div>
             </article>
           </section>
           <!-- ======================================== -->
