--- a/Assignments/Assignment Grid RWD/Grid RWD Basic 85/index.html
+++ b/Assignments/Assignment Grid RWD/Grid RWD Basic 85/index.html
@@ -77,9 +77,9 @@
                         <strong>CSK</strong>
                         <p>The Chennai Super Kings (CSK) is a franchise cricket team based in Chennai, Tamil Nadu.
                             Founded in 2008</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Chennai_Super_Kings" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
                     <article id="article2" class="article_row1">
                         <figure>
@@ -88,9 +88,9 @@
                         <strong>MI</strong>
                         <p>The Mumbai Indians (MI) are a franchise cricket team based in Mumbai, Maharashtra. Founded in
                             2008</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Mumbai_Indians" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
                     <article id="article3" class="article_row1">
                         <figure>
@@ -99,10 +99,10 @@
                         <strong>RCB</strong>
                         <p>The Royal Challengers Bangalore (RCB) are a franchise cricket team based in Bangalore,
                             Karnataka. It was founded in 2008 </p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Royal_Challengers_Bangalore" target="_blank">Read
                                 More »</a>
-                        </p>
+                            </div>
                     </article>
                     <article id="article4" class="article_row1 last">
                         <figure>
@@ -111,17 +111,10 @@
                         <strong>SRH</strong>
                         <p>The Sunrisers Hyderabad (SRH) are a franchise cricket team based in Hyderabad, Telangana,
                             India. Founded in 2012 </p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Sunrisers_Hyderabad" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
-
-                    <!-- ========================spacer================================ -->
-                    <div class="spacer">
-
-                    </div>
-                    <!-- ======================================================== -->
-
                     <article id="article5" class="article_row2">
                         <figure>
                             <img src="./images/demo/32x32(5)" alt="32x32">
@@ -129,9 +122,9 @@
                         <strong>DC</strong>
                         <p>The Delhi Capitals (DC) are a franchise cricket team based out of Delhi in the Indian Premier
                             League (IPL). Founded in 2008 .</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Delhi_Capitals" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
                     <article id="article6" class="article_row1">
                         <figure>
@@ -140,9 +133,9 @@
                         <strong>PBKS</strong>
                         <p>The Punjab Kings (PBKS) are a franchise cricket team based in Mohali, Punjab India.
                             Established in 2008.</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Punjab_Kings" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
                     <article id="article7" class="article_row1">
                         <figure>
@@ -151,9 +144,9 @@
                         <strong>RR</strong>
                         <p>The Rajasthan Royals (RR) are a franchise cricket team based in Jaipur, Rajasthan. Founded in
                             2008</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Rajasthan_Royals" target="_blank">Read More »</a>
-                        </p>
+                       </div>
                     </article>
                     <article id="article8" class="article_row1 last">
                         <figure>
@@ -162,10 +155,10 @@
                         <strong>KKR</strong>
                         <p>The Kolkata Knight Riders (KKR) are a franchise cricket team representing the city of Kolkata
                             in the Indian Premier League.</p>
-                        <p class="readmore">
+                       <div class="readmore">
                             <a href="https://en.wikipedia.org/wiki/Kolkata_Knight_Riders" target="_blank">Read More
                                 »</a>
-                        </p>
+                            </div>
                     </article>
                 </section>
             </div>
@@ -175,8 +168,8 @@
         <!-- =======================================================footer================================================ -->
         <div class="wrapper row3">
             <footer>
-                <p id="left_footer">Copyright © 2021 - All Rights Reserved - IPL</p>
-                <p id="right_footer">Template cloned from OS-Templates by Ervin </p>
+                <p >Copyright © 2021 - All Rights Reserved - IPL</p>
+                <p >Template cloned from OS-Templates by Ervin </p>
             </footer>
         </div>
 
