--- a/HTML/RWD/Template_responsive_grid/Template2.html
+++ b/HTML/RWD/Template_responsive_grid/Template2.html
@@ -68,7 +68,7 @@
                         </figure>
                     </article>
                 </section>
-                <section class="shout"> 
+                <section class="shout">
                     <p>
                         Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
                         Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
@@ -82,7 +82,7 @@
                         <li>
                             <article class="clear">
                                 <figure>
-                                    <img class="one" src="../Template/template_images/180x150.gif" alt="">
+                                    <img src="../Template/template_images/180x150.gif" alt="">
                                     <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
@@ -172,7 +172,7 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
-    </div>
+    </div> -->
 </body>
 
 </html>
