--- a/HTML/RWD/Template_responsive_flexbox/Template2.html
+++ b/HTML/RWD/Template_responsive_flexbox/Template2.html
@@ -39,7 +39,7 @@
             </nav>
         </header>
     </div>
-    <div class="wrapper row2">
+    <!-- <div class="wrapper row2">
         <div id="container" class="clear">
             <div id="homepage">
                 <section id="latest" class="clear">
@@ -68,11 +68,9 @@
                         </figure>
                     </article>
                 </section>
-                <section class="shout"> 
+                <section class="shout">
                     <p>
-                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
-                        urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
+                        Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed. Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.
                     </p>
                 </section>
             </div>
@@ -82,15 +80,12 @@
                         <li>
                             <article class="clear">
                                 <figure>
-                                    <img class="one" src="../Template/template_images/180x150.gif" alt="">
+                                    <img src="../Template/template_images/180x150.gif" alt="">
                                     <figcaption>
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
-                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os
-                                                Templates</a>. For full terms of use of this template please read our<a
-                                                href="https://www.os-templates.com/templates-terms">website template
-                                                licence</a>.
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
                                         </p>
                                         <footer class="more">
                                             <a href="#">Read More>></a>
@@ -107,10 +102,7 @@
                                         <h2>Indonectetus facilis leo nibh</h2>
                                         <p>
                                             This is a W3C compliant free website template from
-                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os
-                                                Templates</a>. For full terms of use of this template please read our<a
-                                                href="https://www.os-templates.com/templates-terms">website template
-                                                licence</a>.
+                                            <a href="https://www.os-templates.com/" title="Free Website Templates">Os Templates</a>. For full terms of use of this template please read our<a href="https://www.os-templates.com/templates-terms">website template licence</a>.
                                         </p>
                                         <footer class="more">
                                             <a href="#">Read More>></a>
@@ -121,44 +113,44 @@
                         </li>
                     </ul>
                 </section>
-                <aside id="right_column">
-                    <h2 class="title">Categories</h2>
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="#">Free WebSite Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free CSS Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free XHTML Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free Web Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free WebSite Layouts</a>
-                            </li>
-                            <li>
-                                <a href="#">Free HTML5 Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free Webdesign Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free Fire Works Templates</a>
-                            </li>
-                            <li>
-                                <a href="#">Free PNG Templates</a>
-                            </li>
-                            <li class="last">
-                                <a href="#">Free WebSite Themes</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </aside>
             </div>
+            <aside id="right_column">
+                <h2 class="title">Categories</h2>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#">Free WebSite Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free CSS Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free XHTML Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Web  Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free WebSite Layouts</a>
+                        </li>
+                        <li>
+                            <a href="#">Free HTML5 Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Webdesign Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free Fire Works Templates</a>
+                        </li>
+                        <li>
+                            <a href="#">Free PNG Templates</a>
+                        </li>
+                        <li class="last">
+                            <a href="#">Free WebSite Themes</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
         </div>
     </div>
     <div class="wrapper row3">
@@ -172,7 +164,7 @@
                 <a href="https://www.os-templates.com/" target="_blank" title="Free Website Templates"> Os Templates</a>
             </p>
         </footer>
-    </div>
+    </div> -->
 </body>
 
 </html>
