--- a/Javascript/JS1_Introduction/sam1_literal_object.html
+++ b/Javascript/JS1_Introduction/sam1_literal_object.html
@@ -21,6 +21,9 @@
 
 
     <script>
+
+        // 1. Literel Way 
+        
         var person = {
             fname: "punem",
             lname: "harish",
@@ -31,6 +34,8 @@
 
         }
         console.log(person)
+
+        //  2. OOP(Object Oriented Programming)
 
         function addSkills() {
             person.skill = "Developer"
