--- a/Assignments/Assignment creating objects/Builtin Constructor.html
+++ b/Assignments/Assignment creating objects/Builtin Constructor.html
@@ -179,7 +179,7 @@
 
     <script>
         //   ------------------object1--------------------
-      var person1 = new Object("Fname1","Lname1",1,null,true);
+      var person1 = new Object({fname:"Fname1",lname:"Lname1",age:1,experience:null,jobSearcb:true});
       console.log(person1);
 
       display1 = document.getElementById("display1");
@@ -212,6 +212,7 @@
       }
       function delete1(){
         delete person1.age;
+        console.log(person1);
         display1.innerHTML = 
       "First Name: " + person1.fname + "<br>" +
       "Second Name: "+ person1.lname + "<br>" +
@@ -221,7 +222,7 @@
 
     //   ------------------object2--------------------
 
-    var person2 = new Object("Fname2","Lname2",2,null,true);
+    var person2 = new Object({fname:"Fname2",lname:"Lname2",age:2,experience:null,jobSearcb:true});
       console.log(person2);
 
       display2 = document.getElementById("display2");
@@ -254,6 +255,7 @@
       }
       function delete2(){
         delete person2.age;
+        console.log(person2);
         display2.innerHTML = 
       "First Name: " + person2.fname + "<br>" +
       "Second Name: "+ person2.lname + "<br>" +
@@ -262,7 +264,7 @@
       
 
       //   ------------------object 3--------------------
-      var person3 = new Object("Fname3","Lname3",3,null,true);
+      var person3 = new Object({fname:"Fname3",lname:"Lname3",age:3,experience:null,jobSearcb:true});
       console.log(person3);
 
       display3 = document.getElementById("display3");
@@ -295,6 +297,7 @@
       }
       function delete3(){
         delete person3.age;
+        console.log(person3);
         display3.innerHTML = 
       "First Name: " + person3.fname + "<br>" +
       "Second Name: "+ person3.lname + "<br>" +
@@ -303,7 +306,7 @@
 
     //   ------------------object 4--------------------
 
-    var person4 = new Object("Fname4","Lname4",4,null,true);
+    var person4 = new Object({fname:"Fname4",lname:"Lname4",age:4,experience:null,jobSearcb:true});
       console.log(person4);
 
       display4 = document.getElementById("display4");
@@ -336,6 +339,7 @@
       }
       function delete4(){
         delete person4.age;
+        console.log(person4);
         display4.innerHTML = 
       "First Name: " + person4.fname + "<br>" +
       "Second Name: "+ person4.lname + "<br>" +
@@ -344,7 +348,7 @@
 
       //   ------------------object 5--------------------
 
-    var person5 = new Object("Fname5","Lname5",5,null,true);
+    var person5 = new Object({fname:"Fname5",lname:"Lname5",age:5,experience:null,jobSearcb:true});
       console.log(person5);
 
       display5 = document.getElementById("display5");
@@ -377,6 +381,7 @@
       }
       function delete5(){
         delete person5.age;
+        console.log(person5);
         display5.innerHTML = 
       "First Name: " + person5.fname + "<br>" +
       "Second Name: "+ person5.lname + "<br>" +
@@ -384,7 +389,7 @@
       }
 
       //   ------------------object6--------------------
-      var person6 = new Object("Fname6","Lname6",6,null,true);
+      var person6 = new Object({fname:"Fname6",lname:"Lname6",age:6,experience:null,jobSearcb:true});
       console.log(person6);
 
       display6 = document.getElementById("display6");
@@ -418,6 +423,7 @@
       }
       function delete6(){
         delete person6.age;
+        console.log(person6);
         display6.innerHTML = 
       "First Name: " + person6.fname + "<br>" +
       "Second Name: "+ person6.lname + "<br>" +
@@ -428,7 +434,7 @@
 
     //   ------------------object7--------------------
 
-    var person7 = new Object("Fname7","Lname7",7,null,true);
+    var person7 = new Object({fname:"Fname7",lname:"Lname7",age:7,experience:null,jobSearcb:true});
       console.log(person7);
 
       display7 = document.getElementById("display7");
@@ -461,6 +467,7 @@
       }
       function delete7(){
         delete person7.age;
+        console.log(person7);
         display7.innerHTML = 
       "First Name: " + person7.fname + "<br>" +
       "Second Name: "+ person7.lname + "<br>" +
@@ -468,7 +475,7 @@
       }
 
       //   ------------------object 8--------------------
-      var person8 = new Object("Fname8","Lname8",8,null,true);
+      var person8 = new Object({fname:"Fname8",lname:"Lname8",age:8,experience:null,jobSearcb:true});
       console.log(person8);
 
       display8 = document.getElementById("display8");
@@ -501,6 +508,7 @@
       }
       function delete8(){
         delete person8.age;
+        console.log(person8);
         display8.innerHTML = 
       "First Name: " + person8.fname + "<br>" +
       "Second Name: "+ person8.lname + "<br>" +
@@ -510,7 +518,7 @@
 
     //   ------------------object 9--------------------
 
-    var person9 = new Object("Fname9","Lname9",9,null,true);
+    var person9 = new Object({fname:"Fname9",lname:"Lname9",age:9,experience:null,jobSearcb:true});
       console.log(person9);
 
       display9 = document.getElementById("display9");
@@ -543,6 +551,7 @@
       }
       function delete9(){
         delete person9.age;
+        console.log(person9);
         display9.innerHTML = 
       "First Name: " + person9.fname + "<br>" +
       "Second Name: "+ person9.lname + "<br>" +
@@ -551,7 +560,7 @@
 
       //   ------------------object 10--------------------
 
-    var person10 = new Object("Fname10","Lname10",10,null,true);
+    var person10 = new Object({fname:"Fname10",lname:"Lname10",age:10,experience:null,jobSearcb:true});
       console.log(person10);
 
       display10 = document.getElementById("display10");
@@ -584,6 +593,7 @@
       }
       function delete10(){
         delete person10.age;
+        console.log(person10);
         display10.innerHTML = 
       "First Name: " + person10.fname + "<br>" +
       "Second Name: "+ person10.lname + "<br>" +
