--- a/Assignments/Assignment creating objects/Constructor Fucntions.html
+++ b/Assignments/Assignment creating objects/Constructor Fucntions.html
@@ -220,6 +220,7 @@
       }
       function delete1(){
         delete person1.age;
+        console.log(person1);
         display1.innerHTML = 
       "First Name: " + person1.fname + "<br>" +
       "Second Name: "+ person1.lname + "<br>" +
@@ -262,6 +263,7 @@
       }
       function delete2(){
         delete person2.age;
+        console.log(person2);
         display2.innerHTML = 
       "First Name: " + person2.fname + "<br>" +
       "Second Name: "+ person2.lname + "<br>" +
@@ -303,6 +305,7 @@
       }
       function delete3(){
         delete person3.age;
+        console.log(person3);
         display3.innerHTML = 
       "First Name: " + person3.fname + "<br>" +
       "Second Name: "+ person3.lname + "<br>" +
@@ -344,6 +347,7 @@
       }
       function delete4(){
         delete person4.age;
+        console.log(person4);
         display4.innerHTML = 
       "First Name: " + person4.fname + "<br>" +
       "Second Name: "+ person4.lname + "<br>" +
@@ -385,6 +389,7 @@
       }
       function delete5(){
         delete person5.age;
+        console.log(person5);
         display5.innerHTML = 
       "First Name: " + person5.fname + "<br>" +
       "Second Name: "+ person5.lname + "<br>" +
@@ -425,6 +430,7 @@
       }
       function delete6(){
         delete person6.age;
+        console.log(person6);
         display6.innerHTML = 
       "First Name: " + person6.fname + "<br>" +
       "Second Name: "+ person6.lname + "<br>" +
@@ -466,6 +472,7 @@
       }
       function delete7(){
         delete person7.age;
+        console.log(person7);
         display7.innerHTML = 
       "First Name: " + person7.fname + "<br>" +
       "Second Name: "+ person7.lname + "<br>" +
@@ -506,6 +513,7 @@
       }
       function delete8(){
         delete person8.age;
+        console.log(person8);
         display8.innerHTML = 
       "First Name: " + person8.fname + "<br>" +
       "Second Name: "+ person8.lname + "<br>" +
@@ -548,6 +556,7 @@
       }
       function delete9(){
         delete person9.age;
+        console.log(person9);
         display9.innerHTML = 
       "First Name: " + person9.fname + "<br>" +
       "Second Name: "+ person9.lname + "<br>" +
@@ -589,6 +598,7 @@
       }
       function delete10(){
         delete person10.age;
+        console.log(person10);
         display10.innerHTML = 
       "First Name: " + person10.fname + "<br>" +
       "Second Name: "+ person10.lname + "<br>" +
