--- a/HTML/Javascript/Constructionway/Sample2.html
+++ b/HTML/Javascript/Constructionway/Sample2.html
@@ -11,12 +11,8 @@
 <body>
     <script>
         // Creating Objectas With Built in Contructor 
-        var ranadeep = new Object({});
-        ranadeep.fname = "Padi"
-        ranadeep.lname = "Ranadeep"
-        ranadeep.email= "ranadeepreddypadi@gmail.com"
-        console.log(ranadeep)
-
+       var ranadeep = new Object({ Fname: "Padi", Lname: "Ranadeep", Email: "ranadeepreddypadi@gmail.com" });
+       console.log(ranadeep)
         
     </script>
 </body>
