--- a/HTML/Javascript/Constructionway/sample4.html
+++ b/HTML/Javascript/Constructionway/sample4.html
@@ -11,13 +11,8 @@
 <body>
     <script>
         // Creating Objectas With Built in Contructor 
-        var ranadeep = new Object({});
-        ranadeep.fname = "Padi"
-        ranadeep.lname = "Ranadeep"
-        ranadeep.email= "ranadeepreddypadi@gmail.com"
-        console.log(ranadeep)
-
-        
+      var icecreams = new Object({ Type1:"Venella" , Type2:"strawberry",Type3:"butterscocth"})
+      console.log(icecreams)
     </script>
 </body>
 
