--- a/HTML/Javascript/Constructionway/sample5.html
+++ b/HTML/Javascript/Constructionway/sample5.html
@@ -7,17 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+<button onclick= "addtype4()">Add</button>
 <body>
     <script>
         // Creating Objectas With Built in Contructor 
-        var ranadeep = new Object({});
-        ranadeep.fname = "Padi"
-        ranadeep.lname = "Ranadeep"
-        ranadeep.email= "ranadeepreddypadi@gmail.com"
-        console.log(ranadeep)
-
-        
+      var icecreams = new Object({ Type1:"Venella" , Type2:"strawberry",Type3:"butterscocth"})
+      console.log(icecreams)
+      
+      function addtype4(){
+          icecreams.Type4="Chocolate"
+          console.log(icecreams)
+      }
     </script>
 </body>
 
