--- a/Assignments/Assignment Flex RWD/T84_Movie_Poster_template.html
+++ b/Assignments/Assignment Flex RWD/T84_Movie_Poster_template.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic-84</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <title>Movie Dada</title>
+    <link rel="stylesheet" href="./T84_Movie_Poster_Style.css">
   </head>
   <body>
     <!-- ============================ Header with search box on right and navigator at bottom ============================ -->
@@ -14,9 +14,9 @@
       <header>
         <div id="title">
           <h1>
-            <a href="#"> <span style="color: #fc813b">Indian Cricket </span></a>
+            <a href="#"> <span >Movie Dada </span></a>
           </h1>
-          <h2>Bleed Blue</h2>
+          <h2>Free To Watch</h2>
         </div>
         <form action="#">
           <fieldset>
@@ -31,11 +31,11 @@
         </form>
         <nav>
           <ul>
-            <li><a href="#title">Home</a></li>
-            <li><a href="#section1">Cover Image</a></li>
-            <li><a href="#section2">Description</a></li>
-            <li><a href="#section3">Forms</a></li>
-            <li class=".last"><a href="#section4">Latest from Gallery</a></li>
+            <li><a href="#title">new Movies</a></li>
+            <li><a href="#section1">Tollywood</a></li>
+            <li><a href="#section2">Bollywood</a></li>
+            <li><a href="#section3">Hollywood</a></li>
+            <li class=".last"><a href="#section4">Others</a></li>
           </ul>
         </nav>
       </header>
@@ -47,33 +47,28 @@
       <div class="container">
         <!-- ==================== Section 1 ==================== -->
         <section class="section1">
-          <img src="./images/demo/960x360" alt="Indian cricket team" />
+          <img src="./images/power.jpg" alt="" />
         </section>
         <!-- ==================== Section 2 ==================== -->
         <section class="section2">
           <p>
-            The India men's national cricket team, also known as Team India and
-            Men in Blue. The India women's national cricket team, nicknamed the
-            Women in Blue, represents the country of India in international
-            cricket.
+            Bheemla Nayak is an upcoming Telugu language action thriller film directed by Saagar K. Chandra from a screenplay written by Trivikram Srinivas. It is a remake of the 2020 Malayalam film Ayyappanum Koshiyum by Sachy. Produced by Suryadevara Naga Vamsi of Sithara Entertainments, the film stars Pawan Kalyan, Rana Daggubati, and Nithya Menen.
           </p>
         </section>
         <div class="homepage">
           <!-- ======================================== -->
           <!-- ======================================== -->
           <!-- ======================================== -->
-          <h1>Forms of Cricket</h1>
+          <h1>Telugu Upcoming Movies</h1>
           <!-- ==================== Section 3 ==================== -->
           <section class="section3">
             <article class="article" id="article1">
               <figure>
-                <img src="./images/demo/32x32(1)" alt="32x32" />
+                <img src="images/weather.jpg" alt="32x32" />
               </figure>
-              <strong>Test Cricket</strong>
+              <strong>Liger</strong>
               <p>
-                Test cricket is the form of the sport of cricket with the
-                longest match duration and is considered the game's highest
-                standard.
+              Liger untitled movie is a romantic action entertainer directed by Puri Jagan and jointly produced by Charmme Kaur and Puri Connects banner.
               </p>
               <p class="readmore">
                 <a
@@ -85,12 +80,11 @@
             </article>
             <article class="article" id="article2">
               <figure>
-                <img src="./images/demo/32x32(2)" alt="32x32" />
+                <img src="images/weather.jpg" alt="32x32" />
               </figure>
-              <strong>One Day International </strong>
+              <strong>Maha Samudram </strong>
               <p>
-                A ODI is a form of limited overs cricket with a fixed number of
-                overs, currently 50, with the game lasting up to 9 hours.
+                Maha Samudram is a romantic action entertainer movie directed by RX 100 fame Ajay Bhupathi. The movie casts Sharwanand, Siddharth, Aditi Rao Hydari and Anu Emmanuel are in the lead roles along with Jagapathi Babu, Rao Ramesh, KGF Ramchandra Raju and many others are seen in supporting roles.
               </p>
               <p class="readmore">
                 <a
@@ -102,13 +96,11 @@
             </article>
             <article class="article" id="article3">
               <figure>
-                <img src="./images/demo/32x32(3)" alt="32x32" />
+                <img src="images/weather.jpg" alt="32x32" />
               </figure>
-              <strong>Twenty20</strong>
-              <p>
-                T20 is a shortened game format of cricket with restricted to a
-                maximum of 20 overs.
-              </p>
+              <strong>Most Eligible Bachelor</strong>
+              <p>Most Eligible Bachelor is a romantic entertainer movie directed by Bommarillu Bhaskar and produced by Bunny Vas and Vasu Varma.<a href="https://www.os-templates.com/">free website templates</a>. The movie cast includes Akhil Akkineni in the lead role. Gopi Sunder scored music.</p>
+
               <p class="readmore">
                 <a href="https://en.wikipedia.org/wiki/Twenty20" target="_blank"
                   >Read More >></a>
@@ -123,26 +115,26 @@
           <section class="section4">
             <article id="article1">
               <figure>
-                <img src="images/demo/215x315(1)" alt="" />
-                <figcaption>smriti mandana</figcaption>
+                <img src="images/images 6.jpg" alt="" />
+                <figcaption>Master</figcaption>
               </figure>
             </article>
             <article id="article2">
               <figure>
-                <img src="images/demo/215x315(2)" alt="" />
-                <figcaption>Mitali Raj</figcaption>
+                <img src="images/images8.jpg" alt="" />
+                <figcaption>Oxygen</figcaption>
               </figure>
             </article>
             <article id="article3">
               <figure>
-                <img src="images/demo/215x315(3)" alt="" />
-                <figcaption>MS Dhoni</figcaption>
+                <img src="images/Bhai.jpg" alt="" />
+                <figcaption>My Story</figcaption>
               </figure>
             </article>
             <article id="article4">
               <figure>
-                <img src="images/demo/215x315(4)" alt="" />
-                <figcaption>Virat Kohli</figcaption>
+                <img src="images/images9.jpg" alt="" />
+                <figcaption>Love Story</figcaption>
               </figure>
             </article>
           </section>
@@ -154,9 +146,9 @@
     <div class="wrapper row3">
       <footer>
         <p id="left_footer">
-          Copyright © 2021 - All Rights Reserved - ScoreBuddy
+          Copyright © 2021 - All Rights Reserved - Hyarry
         </p>
-        <p id="right_footer">Template cloned from OS-Templates by Ervin</p>
+        <p id="right_footer">Templates Developed by Hari</p>
       </footer>
     </div>
   </body>
