--- a/Assignments/Assignment Flex RWD/T87_Flipcart_template.html
+++ b/Assignments/Assignment Flex RWD/T87_Flipcart_template.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic-87</title>
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./T87_Flipcart_Style.css">
 
 </head>
 
@@ -15,16 +15,16 @@
     <div class="wrapper row1">
         <header>
             <div id="title">
-                <h1><a href="#">Basic 87</a></h1>
-                <h2>Free HTML5 Website Template</h2>
+                <h1><a href="#">FlipCart</a></h1>
+                <h2>Easy Shopping</h2>
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li><a href="#">Text Link</a></li>
-                    <li class="last"><a href="#">Text Link</a></li>
+                    <li><a href="#">Profile</a></li>
+                    <li><a href="#">Cart</a></li>
+                    <li><a href="#">WishList</a></li>
+                    <li><a href="#">Favorites</a></li>
+                    <li class="last"><a href="#">Wallet</a></li>
                 </ul>
             </nav>
         </header>
@@ -38,35 +38,34 @@
                 <section id="section1">
                     <article id="article">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/mobile.jpg" width="215" height="315" alt="">
+                            <figcaption>Electronics</figcaption>
                         </figure>
                     </article>
                     <article id="article2">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/grocery.jpg" width="215" height="315" alt="">
+                            <figcaption>Grocery</figcaption>
                         </figure>
                     </article>
                     <article id="article3">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/home.jpg" width="215" height="315" alt="">
+                            <figcaption>Home</figcaption>
                         </figure>
                     </article>
                     <article id="article4">
                         <figure>
-                            <img src="images/demo/215x315.gif" alt="">
-                            <figcaption>IMAGE CAPTION HERE</figcaption>
+                            <img src="images/travel.jpg" width="215" height="315" alt="">
+                            <figcaption>Travel</figcaption>
                         </figure>
                     </article>
                 </section>
 
                 <!-- ========== Section II ============== -->
                 <section id="section2">
-                    <p>Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
-                        Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras urna
-                        urnaretra lor urna neque sed quis orci nulla laoremut vitae doloreet condimentumst.</p>
+                    <p>Spot & Steal Deals for a Limited Time Period. Get Contactless & Save Delivery. Buy Now! 20%-80% off on all products. Get Contactless & Save Delivery. Huge Collection Available.</p>
+
                 </section>
             </div>
             <!-- ========== Main Content============== -->
@@ -78,12 +77,10 @@
                             <!-- ========== Article 1 ============== -->
                             <article id="article1">
                                 <figure id="figure1">
-                                    <img src="./images/demo/180x150.gif" alt="180x150">
+                                    <img src="images/iphones.jpg" alt="180x150">
                                     <figcaption id="figcap1">
-                                        <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>You can use and modify the template for both personal and commercial use. You
-                                            must keep all copyright information and credit links in the template and
-                                            associated files. For more HTML5 templates visit free website templates.</p>
+                                        <h2>IPhone</h2>
+                                        <p>iPhone 6. iPhone SE (1st generation) Sierra blue, silver, gold and graphite.</p>
                                         <div class="readmore">
                                             <a href="#">Read More >></a>
                                         </div>
@@ -95,12 +92,10 @@
                             <!-- ========== Article 2============== -->
                             <article id="article2">
                                 <figure id="figure2">
-                                    <img src="./images/demo/180x150.gif" alt="180x150">
+                                    <img src="images/shoes.jpg" alt="180x150">
                                     <figcaption id="figcap2">
-                                        <h2>INDONECTETUS FACILIS LEO NIBH</h2>
-                                        <p>You can use and modify the template for both personal and commercial use. You
-                                            must keep all copyright information and credit links in the template and
-                                            associated files. For more HTML5 templates visit free website templates.</p>
+                                        <h2>Shoes</h2>
+                                        <p>There are many brands that offer lightweight shoes, like Reebok shoes, Adidas shoes and many more, like the Fila Colourblocked Drebo, for instance.<a href="https://www.os-templates.com/"> Shoes</a>.</p>
                                         <div class="readmore">
                                             <a href="#">Read More >></a>
                                         </div>
@@ -117,16 +112,16 @@
                 <h2>CATEGORIES</h2>
                 <nav>
                     <ul>
-                        <li><a href="#">Free Website Templates</a></li>
-                        <li><a href="#">Free CSS Templates</a></li>
-                        <li><a href="#">Free XHTML Templates</a></li>
-                        <li><a href="#">Free Web Templates</a></li>
-                        <li><a href="#">Free Website Layouts</a></li>
-                        <li><a href="#">Free HTML5 Templates</a></li>
-                        <li><a href="#">Free Webdesign Templates</a></li>
-                        <li><a href="#">Free Firework Templates</a></li>
-                        <li><a href="#">Free PNG Templates</a></li>
-                        <li><a href="#">Free Website Themes</a></li>
+                        <li><a href="#">Gaming</a></li>
+                        <li><a href="#">Health Care</a></li>
+                        <li><a href="#">Toys</a></li>
+                        <li><a href="#">Power Banks</a></li>
+                        <li><a href="#">Fashion</a></li>
+                        <li><a href="#">Headsets</a></li>
+                        <li><a href="#">Tools & Utility</a></li>
+                        <li><a href="#">Lightining</a></li>
+                        <li><a href="#">Air Conditioners</a></li>
+                        <li><a href="#">Buying Guide</a></li>
                     </ul>
                 </nav>
             </aside>
@@ -137,8 +132,8 @@
     <!-- ========== Footer ============== -->
     <div class="wrapper row3">
         <footer>
-            <p>Copyright © 2021 - All Rights Reserved - CinemaBandi</p>
-            <p>Template cloned from OS-Templates by Ervin </p>
+            <p>Copyright © 2021 - All Rights Reserved - flipcart</p>
+            <p>Template developed by Hari</p>
         </footer>
     </div>
 </body>
