--- a/HTML/RWD/Template_responsive_grid/Template6.html
+++ b/HTML/RWD/Template_responsive_grid/Template6.html
@@ -62,7 +62,7 @@
                     <article class="one_third">
                         <h2>Lorum ipsum dolor</h2>
                         <div class="kk">
-                            <img src="../Template/template_images/86/80x80.gif" alt="">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/80x80.gif" alt="">
                             <p>
                                 Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
                                 Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
@@ -78,7 +78,7 @@
                     <article class="one_third">
                         <h2>Lorum ipsum dolor</h2>
                         <div class="kk">
-                            <img src="../Template/template_images/86/80x80.gif" alt="">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/80x80.gif" alt="">
                             <p>
                                 Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
                                 Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
@@ -94,7 +94,7 @@
                     <article class="one_third lastbox">
                         <h2>Lorum ipsum dolor</h2>
                         <div class="kk">
-                            <img src="../Template/template_images/86/80x80.gif" alt="">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/80x80.gif" alt="">
                             <p>
                                 Vestibulumaccumsan egestibulum eu justo convallis augue estas aenean elit intesque sed.
                                 Facilispede estibulum nulla orna nisl velit elit ac aliquat non tincidunt. Namjusto cras
@@ -111,7 +111,8 @@
                 <section id="latest" class="last clear">
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/215x100.gif" alt=""
+                                width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>
@@ -125,7 +126,8 @@
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/215x100.gif" alt=""
+                                width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>
@@ -139,7 +141,8 @@
                     </article>
                     <article class="one_quarter">
                         <figure>
-                            <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/215x100.gif" alt=""
+                                width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>
@@ -153,7 +156,8 @@
                     </article>
                     <article class="one_quarter lastbox">
                         <figure>
-                            <img src="../Template/template_images/86/215x100.gif" alt="" width="215" height="100">
+                            <img src="/HTML/RWD/Template_responsive_flexbox/template_images/86/215x100.gif" alt=""
+                                width="215" height="100">
                             <figcaption>
                                 <h2>Indonectetus facilis</h2>
                                 <p>
