--- a/Nov8 2021(Objects Creation)/constructorClass.html
+++ b/Nov8 2021(Objects Creation)/constructorClass.html
@@ -11,14 +11,8 @@
             }
                 var obj=new objcreation("raja","kumar","rjaja11@gmail.com")
                 console.log(obj)
-            class obj2{
-                constructor(){
-                    this.name="teja";
-                    this.lname="pppp";
-                }
-            }
-            var obj1=new obj2()
-            console.log(obj1)
+                var obj1=new objcreation("raja","baja")
+                console.log(obj1)
         </script>
     </body>
 </html>
