--- a/Nov8 2021(Objects Creation)/customConstructor.html
+++ b/Nov8 2021(Objects Creation)/customConstructor.html
@@ -10,25 +10,19 @@
                 this.lame=lname;
                 this.sal=sal
             }
-            function Employee1(fname,lname) {
-                this.fname=fname;
-                this.lname=lname;                
-            }
-            function Employee2(id,marks,grade) {
-                this.id=id
-                this.marks=marks
-                this.garde
-            }
+            
             var emp = new Employee("teja","raja",100000);
             console.log(emp)
-            var emp1=new Employee1("hari","kumar")
+            var emp1=new Employee("hari","kumar")
             console.log(emp1)
-            var emp2=new Employee2(10,98,"A")
+            var emp2=new Employee(10,98,"A")
             console.log(emp2)
             function add(){
                 emp2.lname="ssss";
                 console.log(emp2)
             }
+            var emp3=new Employee("ravi","kumar",100);
+            console.log(emp3)
             </script>
 
     </body>
