--- a/HTML/Javascript/customconstruction/sample2.html
+++ b/HTML/Javascript/customconstruction/sample2.html
@@ -12,14 +12,14 @@
     <script>
        
         // Custom Constructor
-        function Employee(fname, lname, email) {
-            this.fname = fname;
-            this.lname = lname;
-            this.email = email
+        function Student(Name,Father,Mother){
+            this.Name= Name;
+            this.Father= Father;
+            this.Mother= Mother;
         }
 
-        var emp1 = new Employee("Padi","Ranadeep Reddy","ranadeepreddypadi@gmail.com")
-        console.log(emp1)
+        var std1= new Student("Ranadeep","sambareddy","Srilatha")
+        console.log(std1)
     </script>
 </body>
 
